# m5-products

./: README.md  create_tables.sql  pyproject.toml  task_definition_ecs-revision1.json
.github/workflows/: python-app.yml
src/: app.py
src/api/endpoints/: product_api.py
src/config/: config.py
src/controllers/: product_controller.py
src/entities/schemas/: product_dto.py
src/gateways/mongodb_gateway/: mongodb_gateway.py
src/usecases/: product_usecase.py
tests/TDD/gateways/: test_mongodb_gateway.py
tests/TDD/usecases/: test_customer_usecase.py
tests/features/features/: product.feature
tests/features/features/steps/: test_product_steps.py
tests/utils/: product_helper.py
